Changed CreateEmployeeCommand & Added GetCurrentWorkStateQuery
