# src/Domain/Common/Entities/EntityBase.cs
@@ -1,6 +1,0 @@
-﻿namespace Domain.Common.Entities;
-
-public abstract class EntityBase
-{
-    public Guid Id { get; set; }
-}
