# src/Domain/TimeEntry/TimeEntryDto.cs
@@ -1,13 +1,14 @@
-﻿using Domain.Common.Entities;
-using Domain.Employee;
+﻿using Domain.Employee;
 
 namespace Domain.TimeEntry;
 
-public sealed class TimeEntryDto : EntityBase
+public sealed class TimeEntryDto
 {
+    public Guid Id { get; set; }
+
     public EmployeeDto Employee { get; set; }
 
-    public DateTime StartedAt { get; set; }
+    public DateTime? StartedAt { get; set; }
 
-    public DateTime EndedAt { get; set; }
+    public DateTime? EndedAt { get; set; }
 }
